--- a/css/bp.css
+++ b/css/bp.css
@@ -1,19 +1,195 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(0, 0, 0);
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
-#practices-list, h1, h2, p {
-    /* position: absolute; */
-    /* background: transparent; */
-    /* top: 0%; */
-    color:white;
+body,
+html {
+  background-color: rgb(0, 0, 0);
+  position: relative;
 }
 
 #glCanvas {
-    position:absolute;
-    top 0%;
-    left: 0;
-    z-index: -1;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+#topnav {
+  /* overflow: hidden; */
+  position: fixed;
+  top: 0;
+  z-index: 3;
+  width: 100vw;
+}
+
+#topnav > ul {
+  padding: 0;
+  margin: 0;
+  background-color: #1b1a1a;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(245, 245, 245);
+}
+
+#topnav > ul > li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 1rem;
+  text-decoration: none; /* remove underline */
+  color: rgb(245, 245, 245);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+#topnav > ul > li {
+  position: relative;
+  width: 20rem;
+  display: inline-block;
+  margin: 1rem 2rem;
+  padding: 1rem 0;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  color: rgb(245, 245, 245);
+  text-decoration: none;
+  transition: transform 0.5s ease-in-out, color 0.5s ease-in-out;
+  overflow: hidden;
+}
+
+/* RGB 发光动态变化 */
+#topnav > ul > li:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  border-radius: 5rem;
+  transform: scale(1.1);
+  box-shadow: 0 0 10px rgb(255, 215, 39), 0 0 20px rgba(30, 167, 30, 0.8),
+    0 0 30px rgba(231, 53, 40, 0.8);
+}
+
+/* 边框发光和流动特效 */
+#topnav > ul > li::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5rem;
+  border: 2px solid transparent;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 50, 169, 0.8),
+    rgba(255, 198, 43, 0.897),
+    rgba(255, 50, 169, 0.8)
+  );
+  background-size: 300% 300%;
+  animation: backgroundFlow 5s linear infinite;
+  z-index: -1; /* 放在文字后面 */
+}
+
+#topnav > ul > li:hover::before {
+  filter: blur(0.1rem);
+}
+
+@keyframes backgroundFlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Main Layout */
+.main {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30vh;
+  overflow: hidden;
+  top: 3rem;
+  width: 100%;
+  z-index: 2;
+  color: #fff;
+}
+
+.progress {
+  margin: 0 auto;
+}
+
+.animated-image {
+  opacity: 0;
+  transform: scale(0.8);
+  animation: fadeInScale 1s ease forwards;
+}
+
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+#toggle-sidebar-btn {
+  position: fixed;
+  top: 20vh;
+  left: 5vw;
+  z-index: 11;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid #111111;
+  background-color: #8f40e9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+#sidebar {
+  position: fixed;
+  top: 20vh;
+  left: 1vw;
+  width: 20rem;
+  height: 100vh;
+  background-color: #74616100;
+  color: #fff;
+  padding: 2rem;
+  z-index: 1.6;
+  transition: transform 0.3s ease-in-out;
+}
+
+#sidelist > ul > li {
+  margin: 2rem;
+  padding: 1rem;
+}
+
+#sidelist > ul > li:hover {
+  background-color: #03294e;
 }
