--- a/css/bp.css
+++ b/css/bp.css
@@ -23,45 +23,41 @@ html {
   top: 0;
   z-index: 10;
   width: 100vw;
+  height: 10vh;
+  backdrop-filter: blur(0.5rem);
 }
 
-#topnav > ul {
-  background: linear-gradient(
-    90deg,
-    rgba(50, 70, 255, 1),
-    rgba(255, 68, 43, 1),
-    rgba(50, 70, 255, 1),
-    rgba(255, 68, 43, 1)
-  );
-  background-size: 300% 300%;
-  animation: backgroundFlow 6s linear infinite forwards;
-  border-radius: 1rem 1rem;
-  box-shadow: 0 0 1rem rgb(168, 168, 166), 0 0 2rem rgba(136, 175, 136, 0.8),
-    0 0 3rem rgba(211, 153, 149, 0.8);
-}
-
-#topnav > ul > li a {
-  display: block;
+#topnav ul {
+  position: relative;
   width: 100%;
   height: 100%;
-  padding: 0.5rem 1rem;
+  display: flex;
+  padding: 1% 0;
+}
+
+#topnav li {
+  position: relative;
+  width: 13%;
+  height: 90%;
+  display: inline-block;
+  margin: 1% 3%;
+  padding: 0;
+  transition: transform 1s ease-out;
+}
+
+#topnav > ul > li > a {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
   text-decoration: none;
+  text-align: center;
   color: rgb(245, 245, 245);
 }
 
-#topnav > ul > li {
-  position: relative;
-  width: 20rem;
-  display: inline-block;
-  margin: 1rem 2rem;
-  padding: 1rem 0;
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  transition: transform 1s ease-out;
-  overflow: hidden;
-}
 
 #topnav > ul > li:hover {
   border-radius: 5rem;
@@ -93,86 +89,113 @@ html {
   }
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-/* Main Layout */
-.main {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 30vh;
-  overflow: hidden;
-  top: 3rem;
-  width: 100%;
-  z-index: 2;
-  color: #fff;
-}
-
-.progress {
-  margin: 0 auto;
-}
-
-.animated-image {
-  opacity: 0;
-  transform: scale(0.8);
-  animation: fadeInScale 1s ease forwards;
-}
-
-@keyframes fadeInScale {
-  0% {
-    opacity: 0;
-    transform: scale(0.8);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-#toggle-sidebar-btn {
+#sidebar {
   position: fixed;
+  margin-top: 5rem;
   top: 20vh;
-  left: 5vw;
+  left: 1vw;
+  z-index: 3;
+  transition: transform 0.3s ease-in-out;
+  backdrop-filter: blur(1rem);
+}
+
+#arrow {
+  width: 4rem;
+}
+
+/* Side bar */
+#toggle-sidebar-btn {
+  position: absolute;
+  top: 40%;
+  right: -28%;
   z-index: 11;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 1px solid #111111;
-  background-color: #8f40e9;
+  width: 3rem;
+  height: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  background-color: transparent;
   transition: transform 0.3s ease-in-out;
+}
+
+#sidelist {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border: .1rem solid #fff;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem rgb(63, 63, 26), 0 0 1rem rgba(136, 175, 136, 0.8),
+    0 0 1rem rgba(211, 153, 149, 0.8);
+}
+
+#sidelist > li {
+  height: 4rem;
+  margin: .4rem 0.2rem;
+  transition: transform 1s ease-out;
+}
+
+#sidelist > li > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.7rem;
+  color: rgb(255, 255, 255);
+}
+
+#sidelist > li:hover {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 50, 169, 0.8),
+    rgba(255, 198, 43, 0.9),
+    rgba(255, 50, 169, 0.8),
+    rgba(255, 198, 43, 0.9)
+  );
+  background-size: 300% 300%;
+  transform: scale(1.1) skew(-20deg) translate3d(0rem, 1.5rem, 10rem);
+  transition: transform 1s ease, background-color 1s ease;
+  animation: backgroundFlow 5s linear infinite forwards;
+  border-radius: 1rem;
+}
+
+#sidebar.toggle {
+  transform: translateX(-120%);
 }
 
 #sidebar {
-  position: fixed;
-  top: 20vh;
-  left: 1vw;
-  width: 20rem;
-  height: 100vh;
-  background-color: #74616100;
-  color: #fff;
-  padding: 2rem;
-  z-index: 1.6;
+  transform: translateX(0);
   transition: transform 0.3s ease-in-out;
 }
 
-#sidelist > ul > li {
-  margin: 2rem;
-  padding: 1rem;
+#arrow {
+  transition: transform 0.3s ease-in-out;
 }
 
-#sidelist > ul > li:hover {
-  background-color: #03294e;
+/* Main Layout */
+main {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 25vh;
+  width: 100%;
+  height:auto;
+  z-index: 2;
+  color: #fff;
+}
+
+main p:hover {
+  background-color: aqua;
+}
+
+.progress {
+  margin: 0 auto;
 }
