--- a/css/bp.css
+++ b/css/bp.css
@@ -8,6 +8,7 @@ body,
 html {
   background-color: rgb(0, 0, 0);
   position: relative;
+  scrollbar-width: none;;
 }
 
 #glCanvas {
@@ -24,7 +25,7 @@ html {
   z-index: 10;
   width: 100vw;
   height: 10vh;
-  backdrop-filter: blur(0.5rem);
+  backdrop-filter: blur(1.5rem);
 }
 
 #topnav ul {
@@ -166,42 +167,153 @@ html {
 
 #sidebar.toggle {
   transform: translateX(-120%);
+  transition: transform 1s ease-in-out;
 }
 
 #sidebar {
   transform: translateX(0);
-  transition: transform 0.3s ease-in-out;
+  transition: transform 1s ease-in-out;
 }
 
 #arrow {
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.8s ease-in-out;
 }
 
-/* Main Layout */
 main {
-  position: relative;
+  position: fixed;
+  top: 10vh;
+  left: 0;
+  width: 100vw;
+  height: 75vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
+  justify-content: flex-start;
   align-items: center;
-  margin-top: 25vh;
-  width: 100%;
-  height:auto;
-  overflow: hidden;
-  z-index: 2;
   color: #fff;
-  scrollbar-width: none; /* 适用于 Firefox，隐藏滚动条 */
+  z-index: 2;
 }
 
-main::-webkit-scrollbar {
-  overflow-y: scroll; /* 启用垂直滚动 */
+#summary {
+  position: fixed;
+  bottom: 0vh;
+  left: 0;
+  width: 100vw;
+  height: 15vh;
+  z-index: 30;
+  color: #fff;
 }
 
-main p:hover {
-  background-color: aqua;
+#summary h2, #summary p {
+  position: relative;
+  top: 1%;
+  left: 1%;
+  font-weight: bold;
+  font-family: Italic;
 }
 
 .progress {
+  position: relative;
+  bottom: 0;
   margin: 0 auto;
+  width: 50%;
+  height: 15%;
+}
+
+#animal-picture
+{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 30rem;
+  height: 30rem;
+  border-radius: 50%;
+  z-index: 15;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transform: translate(-50%, -50%);
+}
+
+#animalImg {
+  position: absolute;
+  max-width: 350%;
+  max-height: 350%;
+  object-fit: cover;
+  z-index: 16;
+  border-radius: 50%;
+  opacity: 0;
+  transform: translateY(-100%);
+  animation: animalImage 2s ease-in-out 1s forwards;
+}
+
+#close-btn {
+  position: absolute;
+  bottom: 1%;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  z-index: 17;
+  opacity: 0;
+  animation: closeBtn 1s ease-in-out 1s forwards;
+}
+
+@keyframes closeBtn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes animalImage {
+  0% {
+    transform: scale(0) rotate(0deg);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1) rotate(1800deg);
+    opacity: 1;
+  }
+}
+
+h1 {
+  background: linear-gradient(
+    90deg,
+    rgb(192, 44, 11),
+    rgba(255, 198, 43, 0.9),
+    rgba(49, 111, 228, 0.415),
+    rgba(26, 222, 127, 0.9)
+  );
+  color: transparent;
+  background-clip: text;
+  --webkit-background-clip: text;
+  font-size:10vh;
+  font-weight: bold;
+  font-family: Italic;
+  font-style: italic;
+  background-size: 300% 300%;
+  background-position: 50% 100%;
+  animation: gradient 8s linear infinite alternate 1s forwards;
+}
+
+@keyframes gradient {
+  from {
+    background-position: 0% 50%;
+  }
+  to {
+    background-position: 100% 50%;
+  }
+}
+
+#form-check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
