--- a/css/bp.css
+++ b/css/bp.css
@@ -8,7 +8,8 @@ body,
 html {
   background-color: rgb(0, 0, 0);
   position: relative;
-  scrollbar-width: none;;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
 }
 
 #glCanvas {
@@ -95,7 +96,7 @@ html {
   margin-top: 5rem;
   top: 20vh;
   left: 1vw;
-  z-index: 3;
+  z-index: 103;
   transition: transform 0.3s ease-in-out;
   backdrop-filter: blur(1rem);
 }
@@ -181,8 +182,8 @@ html {
 
 main {
   position: fixed;
+  margin: 0 auto;
   top: 10vh;
-  left: 0;
   width: 100vw;
   height: 75vh;
   overflow-y: scroll;
@@ -230,7 +231,7 @@ main {
   width: 30rem;
   height: 30rem;
   border-radius: 50%;
-  z-index: 15;
+  /* z-index: 0; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -243,11 +244,11 @@ main {
   max-width: 350%;
   max-height: 350%;
   object-fit: cover;
-  z-index: 16;
+  /* z-index: 19; */
   border-radius: 50%;
   opacity: 0;
   transform: translateY(-100%);
-  animation: animalImage 2s ease-in-out 1s forwards;
+  animation: animalImage 2s ease-in-out forwards;
 }
 
 #close-btn {
@@ -256,9 +257,9 @@ main {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  z-index: 17;
+  /* z-index: 19; */
   opacity: 0;
-  animation: closeBtn 1s ease-in-out 1s forwards;
+  animation: closeBtn 1s ease-in-out forwards;
 }
 
 @keyframes closeBtn {
@@ -278,12 +279,13 @@ main {
     opacity: 0;
   }
   100% {
-    transform: scale(1) rotate(1800deg);
+    transform: scale(1.1) rotate(1800deg);
     opacity: 1;
   }
 }
 
 h1 {
+  margin: 0 auto;
   background: linear-gradient(
     90deg,
     rgb(192, 44, 11),
@@ -312,8 +314,78 @@ h1 {
   }
 }
 
-#form-check {
+#practices-list {
+  position: relative;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+#practices-list img {
+  position: relative;
+  margin: 0 auto;
+  width: 15%;
+}
+
+.category {
+  position: relative;
+  backdrop-filter: blur(1rem);
+  border: 0.1rem solid #fff;
+  border-radius: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 90vw;
+  height: auto;
+  margin: 2% auto;
+}
+
+.check-card {
+  position: relative;
+  background-color: rgba(149, 154, 154, 0.366);
+  border-radius: 2rem;
+  margin: 2rem;
+  width: 400px;
+  height: 400px;
+  padding: 3% 2%;
+  z-index: 20;
+  overflow: scroll;
+  scrollbar-width: none;
+}
+
+.check-card:hover {
+  transform: scale(1.1) skew(0, -10deg) translate3d(-5rem, -5rem, 30rem);
+  transition: transform .5s ease-in-out, background-color 1.5s ease-in-out;
+  background-color: rgba(225, 198, 44, 0.9);
+}
+
+.check-card:not(:hover) {
+  transition: all 0.3s ease-in-out;
+}
+
+#practice-title {
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.check-card input[type="checkbox"] {
+  display: none;
+}
+
+.check-card.selected {
+  background-color: rgba(30, 167, 30, 0.8);
+  transform: scale(1.05);
+}
+
+.check-card h5 {
+  font-weight: bold;
+  font-size: 2.2rem;
+}
+
+.check-card p {
+  font-size: 2rem;
 }
