--- a/css/cv.css
+++ b/css/cv.css
@@ -23,9 +23,9 @@ body {
 
 main {
   position: relative;
-  width: 800px;
+  width: min(90vw, 800px);
   height: 100%;
-  margin: 0 auto;
+  margin: 2px auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -72,7 +72,6 @@ h2 {
   position: absolute;
   top: 10px;
   right: 5%;
-  background-color: turquoise;
 }
 
 .name {
@@ -85,13 +84,12 @@ h2 {
   /* background-color: rgb(23, 100, 168); */
 }
 
-.position {
+.experience h4 {
   position: relative;
-  left: 2%;
-  margin: 5px auto;
+  right: 2%;
+  margin: min(15%, 3rem) 5px;
   width: 100%;
-  text-align: left;
-  /* background-color: rgb(110, 158, 38); */
+  text-align: right;
 }
 
 .contact-details {
